--- a/Videos/anime.html
+++ b/Videos/anime.html
@@ -16,8 +16,6 @@
             <br>
             类型:搞笑/奇幻/后宫
             <br>
-            更新：2020-12-03 10:44
-            <br>
             剧情简介：网络动画《妖怪名单》改编自唐人家原作同名网络漫画，动画由上海绘梦负责制作。于2014年08月11日宣布动画化。第1期于2014年12月12日起在爱奇艺、腾讯视频更新，全18话，第1话以23分钟特别形式配信。第2期于2017年8月3日起每周四10:00版权网站更新。 大学生封夕和自己的室友一日购得一望远镜用来偷窥女生宿舍，封夕却意外的发现校花的头上好像有着狐狸耳朵，并非人类。令人意外的是，校花居然也同时找上了他并提出了约会的请求，本是天上掉馅饼的事情却因约会途中天降尸体而变得扑朔迷离。
         </h4>
         <hr>
@@ -31,8 +29,6 @@
             <br>
             类型：搞笑/奇幻/后宫
             <br>
-            更新：2020-12-03 10:44
-            <br>
             剧情简介：追一个男生多久算是痴情？九尾妖狐苏九儿追逐男主封夕已经无数个轮回，时间跨越了几千年，苏九儿依旧在封夕身边，保护着他。而郭双和封夕原本是两情相悦的恋人，无奈却遭遇了前世今生的阴差阳错，再度相逢，已是路人。一个是“明明是我先来的”妖狐苏妲己大人，一个是“你为什么那么熟练啊”的道家少女郭双，到底谁能和这一世的封夕修成正果.....
         </h4>
         <hr>
@@ -45,8 +41,6 @@
             年份：2015
             <br>
             类型：搞笑/奇幻/爱情/治愈
-            <br>
-            更新：2021-07-12 13:53
             <br>
             剧情简介：《狐妖小红娘》的故事围绕人与妖之间的爱情展开。根据古典小说记载，世上有人有妖，妖会与人相恋，妖寿命千万年，人的寿命有限，人死了，妖活着。人会投胎转世，但投胎以后，不记得上辈子的爱。妖如果痴情的话，就去找狐妖“购买”一项服务，让投胎转世的人，回忆起前世的爱。狐妖红娘这一个角色就这样诞生，作品主要讲述了以红娘为职业的狐妖在为前世恋人牵红线过程当中发生的一系列有趣、神秘的故事。
         </h4>
@@ -63,8 +57,6 @@
             <br>
             地区：日本
             <br>
-            更新：2021-05-19 13:59
-            <br>
             剧情简介：故事发生在一处温馨但偏僻的田园小镇奥木染，双亲过世的少年春日野悠（桥本隆 配音）带着体弱多病的妹妹春日野穹（田口宏子 配音）千里迢迢的来到了这里，准备寄宿在祖父留下的房子中。虽然照顾妹妹的起居很辛苦，但悠还是拥有了一段难得愉快的时光。在这里，悠遇见了幼年的玩伴天女目瑛（阪田佳代 配音），成熟温柔的姐姐依媛奈绪（猪口有佳 配音），认真可爱的大小姐渚一叶（小野凉子 配音）等热情亲切的朋友们，还有同班损友中里亮平（中国卓郎 配音）的插科打诨让他笑口常开。同时，一些模糊的回忆逐渐的浮上了心头，是和谁有过怎样的约定呢？面对着面前似曾相识的风景，悠的记忆开始苏醒。
         </h4>
         <hr>
@@ -77,8 +69,6 @@
             年份:2016
             <br>
             类型：奇幻/热血/战斗
-            <br>
-            更新：2020-12-10 09:45
             <br>
             剧情简介：网络动画《镇魂街》改编自许辰原作的同名网络漫画，动画由卢恒宇和李姝洁工作室负责制作。动画剧情采用阴阳版双线叙事手法，单数集为阳版现在篇，双数集为阴版回忆篇。第1期于2016年4月28日起每周四在优酷首发，全24话。普通的应届大学毕业生夏铃在求职之际，收到了一条奇怪的面试通知，因此误入罗刹街并遭到了危险，幸而被镇魂将曹焱兵搭救。然而接触中，曹焱兵却发现夏铃并非看起来那样普通，因为她的身体里也存在着灵力，并且寄宿着一位神秘的守护灵。与此同时，夏铃开始遭到不明身份刺客的追杀，曹焱兵亦被卷入其中，二人的命运从此开始了交集，而在这一切的背后，似乎还隐藏着某些更加危险的秘密……  
         </h4>
@@ -93,8 +83,6 @@
             <br>
             类型：奇幻/热血/战斗
             <br>
-            更新：2021-06-26 20:40
-            <br>
             剧情简介：时隔3年之后，无数粉丝翘首以盼的《镇魂街》动画第二季终于是来了，此番第二季一开播就播出了两集，接下来话不多说，我们就赶紧来看看这两集究竟讲了哪些内容吧。在此前第一季的剧情中，夏玲不小心毁掉了罗刹街的灵槐树，曹焱兵还因此被灵域通缉，为了修复灵槐树，两人不得不离开罗刹街。罗刹街镇魂将曹焱兵和寄灵人夏铃踏上修复灵槐之路，羽林街镇魂将南御夫却受命缉拿曹焱兵，恰有菩提街镇魂将北落师门出面平息事态。但南御夫心怀鬼胎，北落师门与女孩水儿也暗藏秘密，曹焱兵和夏铃又将如何应对。菩提树下，三方命运交结，最终会涌至何处。
         </h4>
         <hr>
@@ -107,8 +95,6 @@
             年份：2023
             <br>
             类型：奇幻/热血/战斗
-            <br>
-            更新：2023-10-08 08:39
             <br>
             剧情简介：该季讲述了，拥有“武神躯”的少年镇魂将——曹焱兵为寻父母下落，与少女夏铃、北落师门等队友，闯入灵域禁地芦花古楼，并与守卫者“风花雪月”四王展开激烈交锋的冒险故事。
         </h4>
@@ -123,8 +109,6 @@
             <br>
             类型：爱情/治愈/剧情/日本动漫
             <br>
-            更新：2020-12-09 10:41
-            <br>
             剧情简介:《我们仍未知道那天所看见的花的名字》是由日本动画公司A-1 Pictures制作的原创电视动画，于2011年4月14日起在日本富士电视台的“noitaminA”节目播出，全11集。官方的简称为“那朵花（あの花）”，在中国通常又被称为“未闻花名”。同名剧场版于2013年8月31日公开播映。《那朵花》是一部用直达内心的笔触描写青春期的少男少女在面对恋情、友情、纠葛时，有欢欣笑容也有伤心泪水的青春原创动画片。从小时候起一直青梅竹马的6人，却在升上高中之后彼此有了距离。不太与人们接触的主角宿海仁太、有点被小太妹熏染的安城鸣子、进入重点高中的松雪集与鹤见知利子、放弃读高中而展开旅行的久川铁道、只有幼年死去的本间芽衣子（灵魂，只有仁太能看见）还是一如从前。有一天，芽衣子对仁太说：“帮我实现一个愿望吧”。仁太虽然有点为难，却还是答应帮助面码实现愿望。以此为契机，为了实现芽衣子的愿望，分散在各处的大家又再次地聚集在一起.
         <hr>
         <h3>《五等分的新娘第一季》</h3>
@@ -137,9 +121,19 @@
                 <br>
                 类型：搞笑/爱情/后宫
                 <br>
-                更新：2022-10-24 22:02
-                <br>
                 剧情简介:电视动画《五等分的新娘》改编自春场葱作创作的同名恋爱喜剧漫画，于漫画连载一周年之际宣布动画化的决定。一直过着贫困生活的高中二年级学生·上杉风太郎，找到了一份条件非常好的家庭教师兼职。然而，要教导的学生居然是同级生！而且还是五胞胎！！虽然都是美少女，但同时也是“将要留级”、“讨厌学习”的问题学生们！最开始的任务就是要取得这些女孩们的信任……！？每天都热闹喧嚣！中野家的五姐妹所带来的可爱度500%的五个不一样的恋爱喜剧，就此开幕！！
+            <hr>
+            <h3>《五等分的新娘第二季》</h3>
+            <p><a href=""><h3>【标清480P】在线观看</h3></a></p>
+            <p><a href="./016.html"><h3>获取视频源</h3></a></p>
+            <h4>
+                状态：完结
+                <br>
+                年份：2021
+                <br>
+                类型：搞笑/爱情/后宫
+                <br>
+                剧情简介：电视动画《五等分的新娘》改编自春场葱创作的同名恋爱喜剧漫画，官方于2019年5月5日宣布了第二期制作决定的消息。一直过着贫困生活的高中二年级学生·上杉风太郎，找到了一份条件非常好的家庭教师兼职。然而，要教导的学生居然是同级生！而且还是五胞胎！！虽然都是美少女，但同时也是“将要留级”、“讨厌学习”的问题学生们！最开始的任务就是要取得这些女孩们的信任……！？每天都热闹喧嚣！中野家的五姐妹所带来的可爱度500%的五个不一样的恋爱喜剧，就此开幕！！
             <hr>
         <h3>敬请期待</h3>
 </body>
