--- a/Videos/movies.html
+++ b/Videos/movies.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>电影区</title>
+    <title>影视区</title>
     <meta charset="utf-8" /> 
 </head>
 <body>
-        <h1>电影区</h1>
+        <h1>影视区</h1>
         <hr>
         <h3>【在大陆被封禁的】《隐入尘烟》</h3>
         <p><a href="https://www.123pan.com/s/guyiVv-ncoDv.html"><h3>【标清480】在线观看</h3></a></p>
@@ -16,7 +16,33 @@
             类型：剧情
             <br>
             剧情简介：偏远贫穷的西北农村，祖辈劳作的农民生于土，归于土。贫困户马有铁（武仁林 饰）与哥嫂同住，木讷憨厚，所陪伴他的只有那头同样任劳任怨的小毛驴。而手脚残疾且不能生育的曹贵英（海清 饰）更是自幼备受白眼和欺凌。这两个孤寂之人，在家人的撮合下，仿佛丢掉包袱一般被撮合到了一起。有铁珍惜这卑微而难得的“家”，大大的红喜字被他一次次小心翼翼揭下来，重新贴在下一个栖身之所的墙壁上。为了讨回村民的欠款，有铁甘愿被一次次剥削自己的熊猫血。为了生活更加幸福，他们养鸡、养猪、盖房、种地……两个渺小而可怜的人啊，笨拙地、卑微地却又倔强地追索着遥远而易碎的幸福。
-         <br>
+        </h4>
+        <hr>
+        <h3>《灵魂摆渡第一季》</h3>
+        <p><a href="https://www.123pan.com/s/guyiVv-xioDv.html"><h3>【标清480】在线观看</h3></a></p>
+        <p><a href="./101.html"><h3>获取视频源</h3></a></p>
+        <h4>
+            年份：2014-02-28 
+            <br>
+            类型：偶像/悬疑/科幻/青春 
+            <br>
+            剧情简介：冬青有一双特别的眼睛，他可以看见鬼魂，并与之沟通。这样特殊的“能力”带来的多数是麻烦。直到有一天，他找到了一份工作，在一间24TH便利店做夜班营业员。这间便利店实际上是一间“灵魂驿站”，灵魂摆渡人赵吏孤独地在这里驻守了五百年，这里白天人来人往，夜里各种鬼魂出没，死去灵魂从这里去往黄泉之国，而每只不肯离去的鬼魂都有一个心愿。
+        </h4>
+        <hr>
+        <h3>《灵魂摆渡第二季》</h3>
+        <p><a href=""><h3>筹备中</h3></a></p>
+        <p><a href=""><h3>获取视频源</h3></a></p>
+        <h4>
+            年份：2015-10-30 
+            <br>
+            类型：灵异/悬疑/喜剧 
+            <br>
+            剧情简介：肉身之眼，晦暗不明，见近不见远，见前不见后，见明不见暗。人的眼睛所见的世界，并非确凿无误的存在。有些人的眼睛，能看见别人看不见的。孤儿夏冬青就拥有一双特别的眼睛，他的眼睛，能看到鬼，看到另一个世界的众生。
+            用这双眼，他看过了那个世界的爱与哀愁，追求和向往；因为这双眼，他结识了“灵魂摆渡人”赵吏和美丽善良的女孩王小娅，冬青几乎爱上了她。然而，像他们突然出现一样，赵吏和王小娅又同时消失在冬青的生活中。
+            一年之后，冬青考上了研究生，身边有了朋友，面上有了笑容，他是一个普通的学生，没有人知道他的秘密，没人知道他与众不同的一双眼。冬青再也找不到以前那间作为灵魂驿站的便利店了，它仿佛不曾存在过世间。没有一个人认识那个叫王小娅的大学女生，也没有一个鬼魂见过那个叫赵吏的灵魂摆渡人。
+            但赵吏的临别赠言犹在耳畔：“当月亮变成红色的时候，我会回来找你”。当月亮变成红色的那一天，赵吏没有回来，但王小娅回来了。小娅再次出现在冬青面前，身份已经变成了九天玄女。而此时的赵吏身受重伤，神志不清地躺在一间精神病院中。玄女和冬青营救出了遭到邪灵禁锢的赵吏，三人再次汇合。
+            赵吏在海边买了一幢别墅，于是，融合着欢笑和泪水的奇异之旅再次开启。他们遇见了拥有天女血统的神秘少女；失足坠楼的建筑民工；为写畅销书而沉迷毒药的作家；追寻前世姻缘的痴情女子；寄托了亡者思念的南海人鱼、而邪恶的影子也在他们身边时隐时现，日本怨灵一直潜伏在中国，对神州大地虎视眈眈。善恶冥昧之处，正邪交战之时，唯有修一颗善心，方能破千百种恶。万人敬仰的神灵为何甘愿留在人间，昆仑和冥界又披着怎样神秘的面纱，冬青身上还藏着哪些惊人秘密，故事已经开场，一起上路去探寻阴阳两界的玄秘，追寻宇宙洪荒的源头。
+            。
         </h4>
         <hr>
         <h3>敬请期待</h3>
