--- a/Videos/anime.html
+++ b/Videos/anime.html
@@ -124,7 +124,7 @@
                 剧情简介:电视动画《五等分的新娘》改编自春场葱作创作的同名恋爱喜剧漫画，于漫画连载一周年之际宣布动画化的决定。一直过着贫困生活的高中二年级学生·上杉风太郎，找到了一份条件非常好的家庭教师兼职。然而，要教导的学生居然是同级生！而且还是五胞胎！！虽然都是美少女，但同时也是“将要留级”、“讨厌学习”的问题学生们！最开始的任务就是要取得这些女孩们的信任……！？每天都热闹喧嚣！中野家的五姐妹所带来的可爱度500%的五个不一样的恋爱喜剧，就此开幕！！
             <hr>
             <h3>《五等分的新娘第二季》</h3>
-            <p><a href=""><h3>【标清480P】在线观看</h3></a></p>
+            <p><a href="https://www.123pan.com/s/guyiVv-JioDv.html"><h3>【标清480P】在线观看</h3></a></p>
             <p><a href="./016.html"><h3>获取视频源</h3></a></p>
             <h4>
                 状态：完结
