--- a/file/files.html
+++ b/file/files.html
@@ -10,6 +10,12 @@
         <h3>7zip-x64解压工具(遇到解压失败不妨试试这个)</h3>
         <p><a href="https://vip.123pan.cn/1815573862/7zip/7z2301-x64.exe">点击下载</a></p>
         <hr>
+        <h3 style="color: red;">我的世界服务器客户端</h3>
+        <p style="font-size: 20px;">【ZIP文件 (解压乱码可尝试下载7z文件)】</p>
+        <p><a href="https://vip.123pan.cn/1815573862/HMCL&Java/%E5%AE%A2%E6%88%B7%E7%AB%AF.zip">点击下载</a></p>
+        <p style="font-size: 20px;">【7z文件 (解压可能需要7zip等软件)】</p>
+        <p><a href="https://vip.123pan.cn/1815573862/HMCL&Java/%E5%AE%A2%E6%88%B7%E7%AB%AF.7z">点击下载</a></p>
+        <hr>
         <h3>CS1.6</h3>
         <p><a href="https://vip.123pan.cn/1815573862/CS1.6/CS1.6.zip">点击下载</a></p>
         <hr>
@@ -25,9 +31,6 @@
         <hr>
         <h3>局域网聊天工具：梦想飞聊</h3>
         <p><a href="https://vip.123pan.cn/1815573862/%E6%A2%A6%E6%83%B3%E9%A3%9E%E8%81%8A/DreamChat.zip">点击下载</a></p>
-        <hr>
-        <h3>HMCL启动器&Java</h3>
-        <p><a href="https://vip.123pan.cn/1815573862/HMCL&Java/HMCL&Java.zip">点击下载</a></p>
         <hr>
         <h3>PokeMMO语言包&ROM</h3>
         <p><a href="https://www.123pan.com/s/guyiVv-BnoDv.html">点我获取</a></p>
