--- a/Love/index.html
+++ b/Love/index.html
@@ -12,9 +12,9 @@
 </head>
 <body>
     <!--插入文本-->
-    <!--<p class="love_you">在亿万人海相遇，有同样默契，是多么不容易</p>-->
+    <p class="love_you">傻狗王雨涵，大冷天吃冰棍</p>
     <!-- 这里替换音乐 -->
-    <audio src="情花-本兮.mp3" autoplay="autoplay" loop="loop" controls="controls"></audio>
+    <!--<audio src="情花-本兮.mp3" autoplay="autoplay" loop="loop" controls="controls"></audio>-->
     <canvas id="lovexf"></canvas>
     <script src="script.js"></script>
     <script src="个人主页\file\Love\click.js"></script>
