--- a/Love/index.html
+++ b/Love/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <!--插入文本-->
-    <!--<p class="love_you"></p>-->
+    <!--<p class="love_you">这里插入文本</p>-->
     <!-- 这里替换音乐 -->
     <!--<audio src="情花-本兮.mp3" autoplay="autoplay" loop="loop" controls="controls"></audio>-->
     <canvas id="lovexf"></canvas>
